<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_notes"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet"
    android:orientation="vertical"
    app:behavior_peekHeight="40dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:id="@+id/bottom_text_notes"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:fontFamily="@font/averia_gruesa_libre"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/click_me"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor1"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/bg_note_color" />

            <ImageView
                android:id="@+id/imageColor1"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_done_24" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor2"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/bg_note_color2" />

            <ImageView
                android:id="@+id/imageColor2"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:padding="10dp" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor3"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/bg_note_color3" />

            <ImageView
                android:id="@+id/imageColor3"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:padding="10dp" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor4"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/bg_note_color4" />

            <ImageView
                android:id="@+id/imageColor4"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:padding="10dp" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor5"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/bg_note_color5" />

            <ImageView
                android:id="@+id/imageColor5"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:padding="10dp" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor6"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/bg_note_color6" />

            <ImageView
                android:id="@+id/imageColor6"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:padding="10dp" />

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/averia_gruesa_libre"
            android:includeFontPadding="false"
            android:text="@string/pick_color"
            android:textColor="@color/white"
            android:textSize="13sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/add_img"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:src="@drawable/ic_baseline_image_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:fontFamily="@font/averia_gruesa_libre"
            android:text="@string/add_image"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/remove"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_margin="7dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:src="@drawable/ic_baseline_delete_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/averia_gruesa_libre"
            android:includeFontPadding="false"
            android:text="Delete Note"
            android:textColor="@color/white"
            android:textSize="12dp" />
    </LinearLayout>


</LinearLayout>